fix: Add translate3d with z depth to nav for 'gotcha' in safari overriding z-index

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -185,7 +185,7 @@ button:active {
     cursor: pointer;
     right: 5%;
     top: 50%;
-    transform: translate(-5%, -50%);
+    transform: translate3d(-5%, -50%, 2px);
     z-index: 1000;
   }
   .hamburger .line {
@@ -197,7 +197,7 @@ button:active {
   }
 
   .hamburger .open:nth-child(1) {
-      transform: rotate(45deg) translate(4px, 6px);
+      transform: rotate(45deg) translate3d(4px, 6px, 2px);
     }
 
     .hamburger .open:nth-child(2) {
@@ -205,24 +205,26 @@ button:active {
     }
 
     .hamburger .open:nth-child(3) {
-      transform: rotate(-45deg) translate(6px, -7px);
+      transform: rotate(-45deg) translate3d(6px, -7px, 2px);
     }
 
   .nav-links {
+    display: grid;
     right: 0;
-    transform: translateX(100%);
+    transform: translate3d(100%, 0, 1px);
     position: fixed;
     height: 100vh;
     width: 50%;
     background: var(--secondary-color);
-    flex-direction: column;
     align-items: flex-end;
+    justify-items: flex-end;
+    justify-content: flex-end;
     transition: all 0.6s;
   }
 
   .nav-links.open {
     z-index: 99;
-    transform: translateX(0%);
+    transform: translate3d(0%, 0, 1px);
   }
 }
 
